// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render a button 1`] = `
<div>
  <button
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
    type="button"
  >
    My button 1
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button when \`href\` is not set 1`] = `
<div>
  <button
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
    type="button"
  >
    My button 7
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button with addional attributes 1`] = `
<div>
  <button
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
    title="Click me"
    type="button"
  >
    My button 5
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button with addional classes 1`] = `
<div>
  <button
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--l my-class"
    type="button"
  >
    My button 6
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a button with custom \`aria-label\` 1`] = `
<div>
  <button
    aria-label="This is a custom aria-label"
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
    type="button"
  >
    My button 9
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a full-width button 1`] = `
<div>
  <button
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--block dbx-button--l"
    type="button"
  >
    My button 4
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a secondary button 1`] = `
<div>
  <button
    class="dbx-button dbx-button--secondary dbx-button--default dbx-button--l"
    type="button"
  >
    My button 3
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render a submit button 1`] = `
<div>
  <button
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
    type="submit"
  >
    My button 2
  </button>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Button Component should render an anchor when \`href\` is set 1`] = `
<div>
  <a
    class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
    href="#"
  >
    My button 8
  </a>
  <span
    class="dbx-inline-spacer"
  >
     
  </span>
</div>
`;
